--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -1,14 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/styles.css" rel="stylesheet" />
-    <title class="te">Vite + React</title>
+    <title>Eduport Navbar</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+  <body class="bg-gray-50">
+    <!-- Navbar -->
+    <nav class="bg-white shadow-sm border-b border-gray-100">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between items-center h-16">
+            <div class="flex items-center ">
+              <!-- Brand Name -->
+              <span
+                class="leading-[33.24px] tracking-[2%] text-[37.99px] font-semibold italic font-gilroy"
+                >eduport</span
+              >
+            </div>
+          <!-- Navigation Links -->
+          <div
+            class="flex w-[393px] h-[50px] rounded-[64px] p-[4px] gap-[8px] bg-[#F0F4FF] shadow"
+          >
+            <a
+              href="#"
+              class="inline-flex items-center justify-center font-[500] pt-[16px] pr-[20px] pb-[16px] pl-[20px] hover:rounded-[48px] hover:bg-white hover:text-[#0140C1] font-poppins"
+              >Özellikler</a
+            >
+            <a
+              href="#"
+              class="inline-flex items-center justify-center text-[14px] leading-[33.24px] font-[500] font-[Poppins] px-[20px] py-[16px] rounded-[48px] hover:text-[#0140C1] hover:bg-white transition-all duration-150"
+              >Modüller</a
+            >
+            <a
+              href="#"
+              class="inline-flex items-center justify-center text-[14px] leading-[33.24px] font-[500] font-[Poppins] px-[20px] py-[16px] rounded-[48px] hover:text-[#0140C1] hover:bg-white transition-all duration-150"
+              >Nedir?</a
+            >
+            <a
+              href="#"
+              class="inline-flex items-center justify-center text-[14px] leading-[33.24px] font-[500] font-[Poppins] px-[20px] py-[16px] rounded-[48px] hover:text-[#0140C1] hover:bg-white transition-all duration-150"
+              >Blog</a
+            >
+          </div>
+          <!-- Right Section -->
+          <div class="flex justify-between gap-8 relative group ">
+            <div class="relative group inline-block">
+            <!-- Language Selector -->
+            <div
+              class="flex items-center w-[48px] h-[48px] rounded-[64px] px-[8px] py-[4px] gap-[6px]"
+              style="font-family: 'Poppins', sans-serif"
+            >
+              <span
+                class="text-[14px] font-medium leading-[33.24px] tracking-[0]"
+              >
+                EN
+              </span>
+              <i class="fas fa-chevron-down text-[14px]"></i>
+            </div>
+            <div  class="absolute left-0 top-full mt-1 min-w-[48px] bg-white border border-gray-200 rounded-md shadow-md hidden group-hover:block z-10"
+            >
+              <a
+                href="#"
+                class="block px-3 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-md"
+              >
+                TR
+              </a>
+            </div>
+            </div>
+
+            <!-- Teklif Al Button -->
+            <a href="#" class="flex items-center  h-[48px] gap-2 bg-white  border p-[24px] gap-[14px]border-[#0140C1] rounded-[32px] ">
+              <span class="">Teklif Al</span>
+              <i class="fas fa-external-link-alt text-xs"></i>
+            </a>
+            <!-- Demo Button -->
+            <button
+              class="h-[48px] rounded-[32px] p-[24px] font-medium text-[14px] leading-[33.24px] flex items-center justify-center bg-blue-600 text-white hover:bg-blue-700 transition-colors"
+            >
+              Demo
+            </button>
+          </div>
+        </div>
+      </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+   
+      </div>
   </body>
 </html>
